copyright spacing fixed, margin-right on behance icon fixed (erased)

--- a/_sass/minima/_footer.scss
+++ b/_sass/minima/_footer.scss
@@ -45,6 +45,10 @@ footer {
     justify-content:center; 
     margin-bottom: var(--padd-main-v);
   }
+
+  .footer-ul-div li:last-of-type {
+    margin-right: 0;
+}
   
   /* Style Copyright mark*/
   footer p {
@@ -57,6 +61,8 @@ footer {
 
   #copyright {
     margin-top: var(--padd-main-v);
+    margin-left: 0;
+    margin-right: 0;
   }
   
 
@@ -110,6 +116,7 @@ footer {
 
       #copyright {
         margin-top: 0;
+        margin-left: 20px;
       }
 }
 
